Refactor game_main.js

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div id="debug">
+    <!-- <div id="debug">
         Debug Messages Here
-    </div>
+    </div> -->
 
     <canvas id="cnvs"></canvas>
 
