--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     
     <canvas id="cnvs"></canvas>
-
+    <button onclick="init_game()" id="restartBtn">Restart?</button>
+    
     <div id="banner">
         <div id="bannerInfo">
             <div>
@@ -95,7 +96,7 @@
 
             </p>
         </div>
-        <button onclick="main()" id="restartBtn">Start</button>
+        <button onclick="main()">Start</button>
     </div>
 
     <div id="loader">
