font and styles

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
                 <!-- TOUCH CONTROL -->
                 <input type="checkbox" id="enableTouchControl" checked>
-                <label for="enableTouchControl"> Enable \ Disable Touch Controllers</label>
+                <label for="enableTouchControl"> Enable Touch Controllers</label>
                 <br>
                 <!-- Portrait Landscape -->
-                <input type="checkbox" id="enableLandscapeMode" checked>
+                <input type="checkbox" id="enableLandscapeMode">
                 <label for="enableLandscapeMode"> Force Landscape Mode</label>
                 <br>
                 <!-- CLICK TO SHOOT -->
@@ -42,65 +42,66 @@
             <br>
             <h1>Game Instruction 📜</h1>
             <p>
-            <h3>
-                #1 Wear haedphones 🎧 for best experience <br>
-                because sound effects are really amazing 😄.
-                <br>
-                <small> (i got them from some random sites) </small>
+            <ul>
+                <li>
+                    #1 Wear haedphones 🎧 for best experience <br>
+                    because sound effects are really amazing 😄.
+                    <br>
+                    <small> (i got them from some random sites) </small>
 
-            </h3>
+                </li>
 
-            <h3>
-                The Falling Moon 🌑 is your enemy Shoot it down before it hits spikes or on your head 🤕.
-            </h3>
-            
-            <h3>
-                Keep it in center by shooting bullets to get more score.
-                <br>
-                <!-- Easter egg : Dont kill the moon quickly to get even more scores -->
-            </h3>
-            <h3>
-                you get <span style="color:tomato"> &plus;1000 </span> Score after winnig.
-            </h3>
+                <li>
+                    The Falling Moon 🌑 is your enemy Shoot it down before it hits spikes or on your head 🤕.
+                </li>
+
+                <li>
+                    Keep it in center by shooting bullets to get more score.
+                    <br>
+                    <!-- Easter egg : Dont kill the moon quickly to get even more scores -->
+                </li>
+                <li>
+                    you get <span style="color:tomato"> &plus;1000 </span> Score after winnig.
+                </li>
+            </ul>
             <br>
-                Dont forget to share your scores 😉.
+            Dont forget to share your scores 😉.
 
             <h1>Touch Controls 📱</h1>
+            <ul>
+                <li>
+                    touch and drag to move the tank Left or right and to aim
+                    <div class="joyStickSample"> </div>
 
-            <h3>
-                touch and drag to move the tank Left or right and to aim
-                <div class="joyStickSample"> </div>
+                </li>
+                <li>
+                    tap on shoot button to shoot bullets
+                    <!-- <img src="" alt="Joystick Controller image"> -->
+                    <div class="shootButtonSample"> </div>
+                </li>
+            </ul>
+            <h1>PC Controls 💻</h1>
 
-            </h3>
-            <h3>
-                tap on shoot button to shoot bullets
-                <!-- <img src="" alt="Joystick Controller image"> -->
-                <div class="shootButtonSample"> </div>
-            </h3>
-            <h3>
-                <h1>PC Controls 💻</h1>
-
-
-                <ul>
-                    <li> Use <kbd>A</kbd> / <kbd>Left Arrow</kbd> to move left </li>
-                    <li> Use <kbd>D</kbd> / <kbd>Right Arrow</kbd> to move left </li>
-                    <li> Use <kbd>W</kbd> / <kbd>Up Arrow</kbd> to shoot bullets </li>
-                    <li>
-                        Use Mouse to aim / shoot
-                        <br>
-                        <br>
-                        ( or )
-                        <br>
-                        <br>
-                        <kbd>Q</kbd> <kbd>E</kbd> to rotate left , rotate right respectively.
-                    </li>
-                </ul>
-            </h3>
+            <ul>
+                <li> Use <kbd>A</kbd> / <kbd>Left Arrow</kbd> to move left </li>
+                <li> Use <kbd>D</kbd> / <kbd>Right Arrow</kbd> to move left </li>
+                <li> Use <kbd>W</kbd> / <kbd>Up Arrow</kbd> to shoot bullets </li>
+                <li>
+                    Use Mouse to aim / shoot
+                    <br>
+                    <br>
+                    ( or )
+                    <br>
+                    <br>
+                    <kbd>Q</kbd> <kbd>E</kbd> to rotate left , rotate right respectively.
+                </li>
+            </ul>
 
             <h1>Source Code 🍴</h1>
             <h3>
                 Source code is on git-hub repo :
-                <a href="https://github.com/PrashanthKumar0/Center-Or-Death-2"> <small> click here to check it out</small></a>
+                <a href="https://github.com/PrashanthKumar0/Center-Or-Death-2"> <small> click here to check it
+                        out</small></a>
             </h3>
 
             <small> Must play it once on your pc it looks amazing on wide and big screen 😄 </small>
